--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     font-family: 'Courier Prime', monospace;
 }
 body{
-    background-color: #edeaff;
+    background: #edeaff;
 }
 .stopwatch{
     width: 90%;
